[package]
name = "srun"
version = "0.1.0"
edition = "2018"

[lib]
name = "srun"
path = "src/lib.rs" 

[[bin]]
name = "srun"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
anyhow = { version = "1", optional = true }
cached-path = "0.5"
clap = { version = "2", optional = true }
env_logger = { version = "0.9", optional = true }
futures = "0.3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = { version = "0.8", optional = true }
shiplift = "0.7"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }

[features]
default = ["cli"]
cli = ["anyhow", "clap", "env_logger", "serde_yaml", "tokio"]
