[package]
name = "srun"
version = "0.0.3"
authors = ["Yu Yin <yxonic@gmail.com>"]
description = "Library and a command-line tool for running specific tasks in a sandbox environment"
documentation = "https://docs.rs/srun"
license = "MIT"
edition = "2018"

[[bin]]
name = "srun"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
anyhow = { version = "1", optional = true }
cached-path = "0.5"
chrono = "0.4"
clap = { version = "3.0.0-beta.5", optional = true }
env_logger = { version = "0.9", optional = true }
futures = "0.3"
hyper = "0.14"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = { version = "0.8", optional = true }
shiplift = "0.7"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }

[features]
default = ["cli"]
cli = ["anyhow", "clap", "env_logger", "serde_yaml", "tokio"]

[badges]
maintenance = { status = "experimental" }
